# Trawl

./: .gitignore  BRANDING.md  BUILD.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  entitlements.mac.plist  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build-release.yml
backend/: scraper.py  server.py
frontend/: index.html  main.js  preload.js  renderer.js  styles.css
scripts/: build-standalone.sh  setup-macos.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BrandingPanel.tsx  Logo.tsx  MenuBar.tsx  ResultsTable.tsx  ScraperForm.tsx  StatusBar.tsx  UpdateNotification.tsx
src/styles/: branding.css  form.css  menubar.css  status.css  table.css  update.css
